# EDEN-v0

./: .gitignore  README.md  environment.yml  pyproject.toml
config/: regions_v0.yaml  sources.yaml
data/interim/rasters/clipped/chelsa-monthly/: CHELSA_pr_01_2011_V.2.1_AOI.tif  CHELSA_pr_02_2011_V.2.1_AOI.tif  CHELSA_pr_03_2011_V.2.1_AOI.tif  CHELSA_pr_04_2011_V.2.1_AOI.tif  CHELSA_pr_05_2011_V.2.1_AOI.tif  CHELSA_pr_06_2011_V.2.1_AOI.tif  CHELSA_pr_07_2011_V.2.1_AOI.tif  CHELSA_pr_08_2011_V.2.1_AOI.tif  CHELSA_pr_09_2011_V.2.1_AOI.tif  CHELSA_pr_10_2011_V.2.1_AOI.tif  CHELSA_pr_11_2011_V.2.1_AOI.tif  CHELSA_pr_12_2011_V.2.1_AOI.tif  CHELSA_tas_01_2011_V.2.1_AOI.tif  CHELSA_tas_02_2011_V.2.1_AOI.tif  CHELSA_tas_03_2011_V.2.1_AOI.tif  CHELSA_tas_11_2011_V.2.1_AOI.tif  (+1 more)
data/interim/vectors/: ecoregions_selected.gpkg
environment/: notes.md
notebooks/: 01_region_selection.ipynb
notes/: eden_geo_build.md  notes.md  refactor_plan.md
src/eden/: __init__.py  config.py  fetch.py  geo.py  verify.py
src/eden.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/eden/features/: feature_defs.py  perturb_features.py
src/eden/geo/: __main__.py  qa_geo.py  zonal_stats.py
src/eden/ingest/: __main__.py  fetch_chelsa_monthly.py
src/eden/registry/: __main__.py  fetch_ecoregions.py  prep_ecoregions.py
src/features/: build_features.py  derived_features.py  validate_features.py
src/geo/: clip_rasters.py  prep_ecoregions.py  zonal_stats.py
src/ingest/: check_gnatsgo.py  fetch_chelsa_monthly.py  fetch_nlcd.py
tests/: test_prep_ecoregions.py
